feat: add email endpoint
